src/test/ui/uninhabited/privately-uninhabited-mir-call.stderr
error[E0381]: use of possibly-uninitialized variable: `y`
  --> $DIR/privately-uninhabited-mir-call.rs:28:5
   |
LL |     *y = 2;
   |     ^^^^^^ use of possibly-uninitialized `y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
